# satellite-bot

./: .gitignore  Cargo.toml  entrypoint.sh
.github/workflows/: deploy.yml
app/: satellite.py
app/helpers/: constants.py  utils.py
src/: config.rs  main.rs  satellite.py
src/helpers/: constants.py
