[package]
name = "satellite-bot"
version = "0.1.0"
edition = "2018"

[dependencies]
database = { git = "https://github.com/alphabotsystem/dependencies" }
processor = { git = "https://github.com/alphabotsystem/dependencies" }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
phf = { version = "*", features = ["macros"] }
firestore = "*"
chrono = "*"